--- a/sample2.html
+++ b/sample2.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="sample3.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Welcome</h1>
+    <h1 style="text-align: center;">Welcome to our college</h1>
 </body>
 </html>
