--- a/sample2.html
+++ b/sample2.html
@@ -10,5 +10,6 @@
     <h1 style="text-align: center;">Welcome </h1>
     <h2>Hello</h2>
     <h1 style="text-align: center;">Welcome to our college</h1>
+    <h2>Hello everyone</h2>
 </body>
 </html>
